--- a/ElastosBountyProgram/front-end/src/style/mobile.scss
+++ b/ElastosBountyProgram/front-end/src/style/mobile.scss
@@ -30,7 +30,7 @@
           display: inline-block;
           padding: 0 3px;
           top: 25px;
-          height: 15px;
+          height: 49px;
           font-size: 13px;
 
           margin-right: 2vw;
